// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardsPurchasedScreen should render with data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsPurchasedScreen
    data={
      Array [
        Object {
          "cost": "123",
          "day": "Monday",
          "id": "id",
          "month": "April",
          "onPress": [MockFunction],
          "reward": "string",
          "status": "pending",
        },
      ]
    }
    labels={Array []}
    onLeftMenuPress={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onRightTabPress={[MockFunction]}
    refreshing={false}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "marginTop": 34,
            }
          }
        >
          <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />
        </View>,
        <View
          style={
            Object {
              "flex": 1,
              "marginBottom": 105,
              "paddingHorizontal": 30,
            }
          }
        >
          <FlatList
            data={
              Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ]
            }
            disableVirtualization={false}
            horizontal={false}
            initialNumToRender={10}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onEndReachedThreshold={2}
            onRefresh={[MockFunction]}
            refreshing={false}
            renderItem={[Function]}
            scrollEventThrottle={50}
            updateCellsBatchingPeriod={50}
            windowSize={21}
          />
        </View>,
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "paddingBottom": 34,
              "paddingTop": 16,
              "position": "absolute",
              "right": 0,
            }
          }
        >
          <NavBar
            activeIndex={2}
            areIconsHidden={true}
            colour="darker"
            hasNotification={false}
            hasWhiteBackground={true}
            labels={Array []}
          />
        </View>,
      ],
      "style": Object {
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "marginTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeTabIndex": 1,
            "onLeftTabPress": [MockFunction],
            "onRightTabPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <FlatList
            data={
              Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ]
            }
            disableVirtualization={false}
            horizontal={false}
            initialNumToRender={10}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onEndReachedThreshold={2}
            onRefresh={[MockFunction]}
            refreshing={false}
            renderItem={[Function]}
            scrollEventThrottle={50}
            updateCellsBatchingPeriod={50}
            windowSize={21}
          />,
          "style": Object {
            "flex": 1,
            "marginBottom": 105,
            "paddingHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "data": Array [
              Object {
                "cost": "123",
                "day": "Monday",
                "id": "id",
                "month": "April",
                "onPress": [MockFunction],
                "reward": "string",
                "status": "pending",
              },
            ],
            "disableVirtualization": false,
            "horizontal": false,
            "initialNumToRender": 10,
            "keyExtractor": [Function],
            "maxToRenderPerBatch": 10,
            "numColumns": 1,
            "onEndReachedThreshold": 2,
            "onRefresh": [MockFunction],
            "refreshing": false,
            "renderItem": [Function],
            "scrollEventThrottle": 50,
            "updateCellsBatchingPeriod": 50,
            "windowSize": 21,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={2}
            areIconsHidden={true}
            colour="darker"
            hasNotification={false}
            hasWhiteBackground={true}
            labels={Array []}
          />,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "rgb(255,255,255)",
            "bottom": 0,
            "left": 0,
            "paddingBottom": 34,
            "paddingTop": 16,
            "position": "absolute",
            "right": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 2,
            "areIconsHidden": true,
            "colour": "darker",
            "hasNotification": false,
            "hasWhiteBackground": true,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </View>,
          <View
            style={
              Object {
                "flex": 1,
                "marginBottom": 105,
                "paddingHorizontal": 30,
              }
            }
          >
            <FlatList
              data={
                Array [
                  Object {
                    "cost": "123",
                    "day": "Monday",
                    "id": "id",
                    "month": "April",
                    "onPress": [MockFunction],
                    "reward": "string",
                    "status": "pending",
                  },
                ]
              }
              disableVirtualization={false}
              horizontal={false}
              initialNumToRender={10}
              keyExtractor={[Function]}
              maxToRenderPerBatch={10}
              numColumns={1}
              onEndReachedThreshold={2}
              onRefresh={[MockFunction]}
              refreshing={false}
              renderItem={[Function]}
              scrollEventThrottle={50}
              updateCellsBatchingPeriod={50}
              windowSize={21}
            />
          </View>,
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "paddingBottom": 34,
                "paddingTop": 16,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <NavBar
              activeIndex={2}
              areIconsHidden={true}
              colour="darker"
              hasNotification={false}
              hasWhiteBackground={true}
              labels={Array []}
            />
          </View>,
        ],
        "style": Object {
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "marginTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeTabIndex": 1,
              "onLeftTabPress": [MockFunction],
              "onRightTabPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <FlatList
              data={
                Array [
                  Object {
                    "cost": "123",
                    "day": "Monday",
                    "id": "id",
                    "month": "April",
                    "onPress": [MockFunction],
                    "reward": "string",
                    "status": "pending",
                  },
                ]
              }
              disableVirtualization={false}
              horizontal={false}
              initialNumToRender={10}
              keyExtractor={[Function]}
              maxToRenderPerBatch={10}
              numColumns={1}
              onEndReachedThreshold={2}
              onRefresh={[MockFunction]}
              refreshing={false}
              renderItem={[Function]}
              scrollEventThrottle={50}
              updateCellsBatchingPeriod={50}
              windowSize={21}
            />,
            "style": Object {
              "flex": 1,
              "marginBottom": 105,
              "paddingHorizontal": 30,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "data": Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ],
              "disableVirtualization": false,
              "horizontal": false,
              "initialNumToRender": 10,
              "keyExtractor": [Function],
              "maxToRenderPerBatch": 10,
              "numColumns": 1,
              "onEndReachedThreshold": 2,
              "onRefresh": [MockFunction],
              "refreshing": false,
              "renderItem": [Function],
              "scrollEventThrottle": 50,
              "updateCellsBatchingPeriod": 50,
              "windowSize": 21,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={2}
              areIconsHidden={true}
              colour="darker"
              hasNotification={false}
              hasWhiteBackground={true}
              labels={Array []}
            />,
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "paddingBottom": 34,
              "paddingTop": 16,
              "position": "absolute",
              "right": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 2,
              "areIconsHidden": true,
              "colour": "darker",
              "hasNotification": false,
              "hasWhiteBackground": true,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RewardsPurchasedScreen should render without data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsPurchasedScreen
    data={Array []}
    labels={Array []}
    onLeftMenuPress={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onRightTabPress={[MockFunction]}
    refreshing={false}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "marginTop": 34,
            }
          }
        >
          <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />
        </View>,
        <View
          style={
            Object {
              "flex": 1,
              "marginBottom": 105,
              "paddingHorizontal": 30,
            }
          }
        >
          <PurchasesEmpty
            onCtaPress={[MockFunction]}
          />
        </View>,
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "paddingBottom": 34,
              "paddingTop": 16,
              "position": "absolute",
              "right": 0,
            }
          }
        >
          <NavBar
            activeIndex={2}
            areIconsHidden={true}
            colour="darker"
            hasNotification={false}
            hasWhiteBackground={true}
            labels={Array []}
          />
        </View>,
      ],
      "style": Object {
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "marginTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeTabIndex": 1,
            "onLeftTabPress": [MockFunction],
            "onRightTabPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <PurchasesEmpty
            onCtaPress={[MockFunction]}
          />,
          "style": Object {
            "flex": 1,
            "marginBottom": 105,
            "paddingHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onCtaPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={2}
            areIconsHidden={true}
            colour="darker"
            hasNotification={false}
            hasWhiteBackground={true}
            labels={Array []}
          />,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "rgb(255,255,255)",
            "bottom": 0,
            "left": 0,
            "paddingBottom": 34,
            "paddingTop": 16,
            "position": "absolute",
            "right": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 2,
            "areIconsHidden": true,
            "colour": "darker",
            "hasNotification": false,
            "hasWhiteBackground": true,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </View>,
          <View
            style={
              Object {
                "flex": 1,
                "marginBottom": 105,
                "paddingHorizontal": 30,
              }
            }
          >
            <PurchasesEmpty
              onCtaPress={[MockFunction]}
            />
          </View>,
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "paddingBottom": 34,
                "paddingTop": 16,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <NavBar
              activeIndex={2}
              areIconsHidden={true}
              colour="darker"
              hasNotification={false}
              hasWhiteBackground={true}
              labels={Array []}
            />
          </View>,
        ],
        "style": Object {
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "marginTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeTabIndex": 1,
              "onLeftTabPress": [MockFunction],
              "onRightTabPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <PurchasesEmpty
              onCtaPress={[MockFunction]}
            />,
            "style": Object {
              "flex": 1,
              "marginBottom": 105,
              "paddingHorizontal": 30,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "onCtaPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={2}
              areIconsHidden={true}
              colour="darker"
              hasNotification={false}
              hasWhiteBackground={true}
              labels={Array []}
            />,
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "paddingBottom": 34,
              "paddingTop": 16,
              "position": "absolute",
              "right": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 2,
              "areIconsHidden": true,
              "colour": "darker",
              "hasNotification": false,
              "hasWhiteBackground": true,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
